--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>AIB Capital Ltd</title>
     <link rel="stylesheet" href="css/app.css">
 </head>
-
 <body>
+
 <div class="grid-container ">
     <div class="title-bar " data-responsive-toggle="mainNavigation" data-hide-for="medium">
         <div class="title-bar-left">
@@ -17,7 +17,7 @@
             <div class="title-bar-title">Menu</div>
         </div>
         <div class="title-bar-right">
-            <img src="images/logo.png"  alt="AIB Capital Ltdhhhh">
+            <img src="images/logo.png" alt="AIB Capital Ltdhhhh">
         </div>
     </div>
     <div class="top-bar" id="mainNavigation">
@@ -37,12 +37,14 @@
                 <li><a href="#">Our Solutions</a></li>
                 <li><a href="#">Media</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><i class="fi-magnifying-glass"></i></li>
+
             </ul>
         </div>
     </div>
 </div>
 
-<article class="grid-container fluid  index">
+<section class="grid-container fluid  index">
     <div class="grid-container">
 
 
@@ -52,7 +54,7 @@
                 discover & exploit the vast<br/>
                 potential for wealth<br/>
                 creation in Africa<br/>
-                <button class="button default">Find Out More</button>
+                <button class="button default">Find Out More &nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp;&gt</button>
             </p>
 
 
@@ -62,10 +64,11 @@
 
         </div>
 
-
     </div>
+</section>
+<section class="grid-container fluid ">
     <div class="grid-x  grid-padding-x  nse-rates-ticker ">
-        <div class="medium-1 cell nse-title">
+        <div class="medium-1 small-3 cell nse-title">
             <p>NSE TICKER</p>
         </div>
         <div class="cell auto nse-content">
@@ -80,19 +83,18 @@
         </div>
     </div>
 
-</article>
+</section>
 
-<br/>
-<article class="grid-container">
+<section class="grid-container">
     <div class="grid-x grid-margin-x  stock-brokage">
         <div class="large-6 cell stock-brokage-left">
-            <h4>Stock Brokage</h4>
-            <p>
+            <h4>Stock Brokage </h4>
+            <p >
                 AIB has appointed securities representative and investors' Agent countrywide to extend its reach. such
                 agents and representatives have undergone appropriate trainingon how to approach and assist prospective
-                investors
+                investors.
                 <br/>
-                <button class="button default"> Find Out More</button>
+                <button class="button default"> Find Out More &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&gt</button>
             </p>
             <!-- <img class="thumbnail" src="https://placehold.it/800x600"> -->
         </div>
@@ -101,17 +103,15 @@
             <h2 class="mobileTitle">Mobile and online trading</h2>
         </div>
     </div>
-</article>
-<article class="grid-container fluid in-the-news">
+</section>
+<section class="grid-container fluid in-the-news">
     <div class="grid-container">
-
-
-        <div class="row ">
-            <div class="column  news-title">
+        <div class="grid-x ">
+            <div class="medium-6 cell  news-title">
                 <h5> In the News</h5>
             </div>
-            <div class="column more-btn">
-                <a href="#" class="button ">View More &gt;</a>
+            <div class="medium-6 cell more-btn">
+                <a href="#" class="button ">View More &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&gt</a>
             </div>
         </div>
 
@@ -163,35 +163,35 @@
 
         </div>
     </div>
-</article>
+</section>
 
-<article class="grid-container fluid  fluid fixed-income">
+<section class="grid-container fluid  fluid fixed-income">
 
-        <div class="row">
+    <div class="grid-x">
 
-            <div class="medium-6 column fixed-income-left ">
-            </div>
+        <div class="medium-6 cell fixed-income-left ">
+        </div>
 
-            <div class="medium-5 column fixed-income-right align-self-middle">
-                <h2 >
-                    Fixed income Securities
-                </h2>
-                <p>We shall seek to find and retain people who are passionate about
-                    a greater couse and empower them to fullfill their dreams</p>
+        <div class="medium-4 cell fixed-income-right align-self-middle">
+            <h2>
+                Fixed income Securities
+            </h2>
+            <p>We shall seek to find and retain people who are passionate about
+                a greater couse and empower them to fullfill their dreams</p>
 
-                <button class="button default">Find Out More</button>
-            </div>
-            <div class="column">
-
-            </div>
-
+            <button class="button default">Find Out More &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&gt</button>
+        </div>
+        <div class="cell">
 
         </div>
 
-</article>
+
+    </div>
+
+</section>
 
 
-<article class="grid-container fluid our-fiduciary">
+<section class="grid-container fluid our-fiduciary">
     <div class="grid-container">
         <div class="grid-x fiduciart-content">
 
@@ -203,26 +203,24 @@
                     Our fiduciary responsibilities to our clients will always come first
                 </h2>
 
-                <button class="button default">Find Out More</button>
+                <button class="button default">Find Out More &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&gt</button>
             </div>
 
 
         </div>
     </div>
-</article>
+</section>
 
 
 <footer class="grid-container fluid footer-section">
-
-    <div class="grid-container ">
-
+    <section class="grid-container ">
         <div class="grid-x upper-foot ">
-            <div class="medium-6 large-6 cell news-title">
-                <div class="row">
-                    <div class="column">
-                        <h6>Social</h6>
+            <div class="medium-6 large-6 cell social-button">
+                <div class="grid-x">
+                    <div class="cell small-4 social-title">
+                        <h6 >Social</h6>
                     </div>
-                    <div class="column">
+                    <div class="cell small-8">
                         <ul class="menu horizontal medium-horizontal">
                             <li>
                                 <i class="fa-facebook"></i>
@@ -236,30 +234,23 @@
                             <li>
                                 <i class="fa-linkedin"></i>
                             </li>
-
                         </ul>
                     </div>
-
                 </div>
-
-
             </div>
             <div class="medium-6 large-6 cell footer-inquires">
-
-                <div class="title">Sales Inquiries - +254 20 220178/2212206</div>
-
-
+                <div class="title">
+                    Sales Inquiries - +254 20 220178/2212206
+                </div>
             </div>
-
         </div>
         <hr/>
-    </div>
+    </section>
 
-    <article class="grid-container footer-links">
-
+    <section class="grid-container footer-links">
         <div class="grid-x businessfoot1">
-            <div class="large-4 cell">
-                <h6>Our Business</h6>
+            <div class="medium-4 cell">
+                <h6 class="f-title">Our Business</h6>
                 <ul class="menu vertical">
                     <li>Stock Crokage</li>
                     <li>Fixed Income</li>
@@ -267,10 +258,10 @@
                     <li>Mobile & online Trading</li>
                     <li>Online Trading</li>
                 </ul>
-
             </div>
-            <div class="large-4 cell businessfoot1">
-                <h6>Our Research</h6>
+
+            <div class="medium-4 cell businessfoot1">
+                <h6 class="f-title">Our Research</h6>
                 <ul class="menu vertical">
                     <li>Monthly Stockwatch & Inflation</li>
                     <li>Price List</li>
@@ -279,33 +270,46 @@
                     <li>Other Reports & Articles</li>
                 </ul>
             </div>
-            <div class="large-4 cell businessfoot3">
 
-                <img src="images/logo.png"/>
-                <form>
-                    <p>subscribe to our reports</p>
-                    <label>
-                        <input type="text" placeholder="Input email address ">
-                    </label>
-                </form>
-
+            <div class="medium-4 cell businessfoot3">
+                <div class="footer-logo">
+                    <img src="images/logo.png"/>
+                </div>
+                <br/>
+                <div class="subscribeform">
+                    <form>
+                        <p class="subscribe-title">subscribe to our reports</p>
+                        <label>
+                            <div class="grid-x">
+                                <div class="small-10 cell">
+                                    <input type="text" placeholder="Input email address ">
+                                </div>
+                                <div class="small-2 cell button">
+                                    <button>
+                                        <span class="btn">&rarr;</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </label>
+                    </form>
+                </div>
             </div>
         </div>
+    </section>
 
-    </article>
-    <div class="grid-container lower-foot ">
+    <section class="grid-container lower-foot ">
         <hr/>
-        <div class="row">
-            <div class="column  ">
+        <div class="grid-x">
+            <div class="cell medium-6 terms ">
                 <p>Careers Office Privacy Term of use</p>
             </div>
-            <div class="column  ">
+            <div class="cell medium-6 copyright ">
                 <div class="title">
                     <p id="left">&copy;2018 AIB Capital. All Rights Reserved</p>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </footer>
 <script src="node_modules/jquery/dist/jquery.js"></script>
 <script src="node_modules/what-input/dist/what-input.js"></script>
