--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
                         <h6 >Social</h6>
                     </div>
                     <div class="cell small-8">
-                        <ul class="menu horizontal medium-horizontal">
+                        <img src="images/buttons.png"  height="50px"/>
+                        <!--<ul class="menu horizontal medium-horizontal">
                             <li>
                                 <i class="fa-facebook"></i>
                             </li>
@@ -235,7 +236,7 @@
                             <li>
                                 <i class="fa-linkedin"></i>
                             </li>
-                        </ul>
+                        </ul>-->
                     </div>
                 </div>
             </div>
@@ -274,7 +275,7 @@
 
             <div class="medium-4 cell businessfoot3">
                 <div class="footer-logo">
-                    <img src="images/logo.png"/>
+                    <img src="images/logofooter.png"/>
                 </div>
                 <br/>
                 <div class="subscribeform">
@@ -287,7 +288,7 @@
                                 </div>
                                 <div class="small-2 cell button">
                                     <button>
-                                        <span class="btn">&rarr;</span>
+                                        <span class="btn"></span>
                                     </button>
                                 </div>
                             </div>
